Issue #26754: Undocumented support of general bytes-like objects as path in compile() and similar functions is now deprecated.